--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     ],
     "require": {
         "composer/installers": "^2.0",
+        "drupal/bootpress": "^11.0",
         "drupal/bootstrap": "^5.0",
         "drupal/classy": "^2.0",
         "drupal/core-composer-scaffold": "^10.4",
@@ -23,6 +24,7 @@
         "drupal/core-recommended": "^10.4",
         "drupal/devel_entity_updates": "^4.2",
         "drupal/menus_attribute": "^1.3",
+        "drupal/stable": "^2.1",
         "drush/drush": "^12.5"
     },
     "conflict": {
